Componente Clientes parte 1

--- a/frontFarm/src/app/admin/farmacias/mantenimiento/farmacias.component.html
+++ b/frontFarm/src/app/admin/farmacias/mantenimiento/farmacias.component.html
@@ -1,6 +1,6 @@
 <!-- frontFarm\src\app\admin\farmacias\mantenimiento\farmacias.component.html -->
-<div class="container mt-4">
-    <h2 class="titulo">Mantenimiento de Farmacias</h2>
+<div class="container">
+    <h2 class="titulo" style="text-align: center;">Mantenimiento de Farmacias</h2>
     <button class="btn-verde mb-3" (click)="abrirModalAgregar()">
         <fa-icon [icon]="'plus'"></fa-icon> Agregar Farmacia
     </button>
