--- a/frontFarm/src/app/admin/proveedores/proveedores.component.html
+++ b/frontFarm/src/app/admin/proveedores/proveedores.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-4">
-    <h2 class="titulo">Mantenimiento de Proveedores</h2>
+<div class="container">
+    <h2 class="titulo" style="text-align: center;">Mantenimiento de Proveedores</h2>
 
     <button class="btn-verde" (click)="abrirModalAgregar()">
         <fa-icon [icon]="'plus'"></fa-icon> Agregar Proveedor
