--- a/frontFarm/src/app/admin/usuarios/usuarios.component.html
+++ b/frontFarm/src/app/admin/usuarios/usuarios.component.html
@@ -1,5 +1,5 @@
-<div class="container mt-4">
-    <h2 class="titulo">Mantenimiento de Usuarios</h2>
+<div class="container">
+    <h2 class="titulo" style="text-align: center;">Mantenimiento de Usuarios</h2>
 
     <button class="btn-verde mb-3" (click)="abrirModalAgregar()">
         <fa-icon [icon]="'plus'"></fa-icon> Agregar Usuario
