--- a/frontFarm/src/app/pages/reportes-utilidad/reportes-utilidad.component.html
+++ b/frontFarm/src/app/pages/reportes-utilidad/reportes-utilidad.component.html
@@ -82,7 +82,7 @@
       <div class="col-md-3">
         <label class="form-label">Los mejores por:</label>
         <select class="form-select" formControlName="ordenClientes" [disabled]="cargando">
-          <option value="ventas">Núm. de ventas</option>
+          <option value="ventas">Núm. de compras</option>
           <option value="utilidad">Utilidad</option>
         </select>
       </div>
