--- a/frontFarm/src/app/admin/clientes/clientes.component.html
+++ b/frontFarm/src/app/admin/clientes/clientes.component.html
@@ -509,5 +509,6 @@
 </div>
 
 <mat-paginator class="paginator-custom" [length]="paginacion.total || 0" [pageSize]="limit" [pageIndex]="(page - 1)"
-    [pageSizeOptions]="[10, 20, 50, 100]" (page)="cambioPagina($event)">
+    [pageSizeOptions]="[10, 20, 50, 100]" (page)="cambioPagina($event)"
+    [showFirstLastButtons]="true">
 </mat-paginator>
