--- a/frontFarm/src/app/pages/reporte-pedidos/reporte-pedidos.component.html
+++ b/frontFarm/src/app/pages/reporte-pedidos/reporte-pedidos.component.html
@@ -163,7 +163,8 @@
                                 <thead>
                                     <tr>
                                         <th colspan="2">Estado: {{ pedido.estado }}</th>
-                                        <th colspan="2">Precio: {{ pedido.total | currency }}</th>
+                                        <th colspan="1">Costo: {{ pedido.costo | currency }}</th>
+                                        <th colspan="1">Precio: {{ pedido.total | currency }}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
